# wasmcloud-payment-example

fakepay-provider/: Cargo.toml  Makefile  a.html  provider.mk
fakepay-provider/src/: main.rs
payactor/: Cargo.toml  Makefile  README.md
payactor/src/: lib.rs
payments/: README.md
