[package]
name = "payactor"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "payactor"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = { version = "0.9", features = ["otel"]}
wasmcloud-interface-httpserver = "0.6"
wasmcloud-examples-payments = { path="../payments/rust" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
